--- a/03_location_dispersion/_slides/index.html
+++ b/03_location_dispersion/_slides/index.html
@@ -1141,6 +1141,12 @@ Var_{\text{absolut}}(X) = \frac{1}{n}\sum_{i=1}^n\big|x_i-\bar{x}\big|
 <td><span class="math inline">\(\sigma^2\)</span></td>
 </tr>
 <tr class="even">
+<td>Korrelation</td>
+<td><span class="math inline">\(r\)</span></td>
+<td><span class="math inline">\(\hat{\rho}\)</span></td>
+<td><span class="math inline">\(\rho^2\)</span></td>
+</tr>
+<tr class="odd">
 <td>Fallzahl</td>
 <td><span class="math inline">\(n\)</span></td>
 <td></td>
