--- a/05_correlation/_slides/index.html
+++ b/05_correlation/_slides/index.html
@@ -455,16 +455,17 @@ Var(X) = \frac{1}{n}\sum_{i=1}^n\big(x_i-\bar{x}\big)^2 = \frac{1}{n}\sum_{i=1}^
 </section>
 <section class="slide level2">
 <h2>Kovarianz</h2>
-<p>Intuition:</p>
+<p><img data-src="images/covariance-examples.png" height="370"></p>
+<p><u>Intuition für positive Kovarianz</u>:</p>
 <ul>
 <li class="fragment"><p>Sind zwei zusammengehörige Datenpunkte <span class="math inline">\(x_i\)</span> und <span class="math inline">\(y_i\)</span> <strong>größer als der Mittelwert</strong>, sind sowohl <span class="math inline">\((x_i-\bar{x})\)</span> als auch <span class="math inline">\((y_i-\bar{y})\)</span> <strong>positiv</strong>, und damit auch das Produkt <span class="math inline">\((x_i-\bar{x})(y_i-\bar{y})\)</span> <strong>positiv</strong>.</p></li>
 <li class="fragment"><p>Sind zwei zusammengehörige Datenpunkte <span class="math inline">\(x_i\)</span> und <span class="math inline">\(y_i\)</span> <strong>geringer als der Mittelwert</strong>, sind sowohl <span class="math inline">\((x_i-\bar{x})\)</span> als auch <span class="math inline">\((y_i-\bar{y})\)</span> <strong>negativ</strong>, und damit das Produkt <span class="math inline">\((x_i-\bar{x})(y_i-\bar{y})\)</span> wieder <strong>positiv</strong>.</p></li>
 </ul>
-<div class="vspace-medium">
+<div class="vspace-small">
 
 </div>
-
-<img data-src="images/covariance-examples.png" class="r-stretch"></section>
+<p>Die Intuition für eine negative Kovarianz funktioniert ähnlich.</p>
+</section>
 <section class="slide level2">
 <h2>Kovarianz: Größe-Gewicht-Beispiel</h2>
 <div class="vspace-small">
