--- a/08_metaanalysis/_slides/index.html
+++ b/08_metaanalysis/_slides/index.html
@@ -342,6 +342,7 @@
 
   <p class="author">Prof.&nbsp;Matthias Guggenmos</p>
   <p class="institute">Health and Medical University Potsdam</p>
+  <p class="date">05.12.2023</p>
 <div style="display: flex; justify-content: space-between; align-items: baseline">
 <div><img src="images/logo_black.png" height="200px"></div>
 <div><img src="images/paradoxia_group_of_scientists.png" height="240px"></div>
@@ -914,7 +915,7 @@ v_i = \frac{\left(1-r^2\right)^2}{n-1}
 </div>
 <p><img src="images/hmu_logo.png" class="slide-logo"></p>
 <div class="footer footer-default">
-
+<p>Vorlesung 08: Metaanalyse</p>
 </div>
 </section>
 <section id="footnotes" class="footnotes footnotes-end-of-document smaller scrollable" role="doc-endnotes"><h2>Fußnoten</h2>
@@ -1165,6 +1166,7 @@ v_i = \frac{\left(1-r^2\right)^2}{n-1}
           }
         });
       }
+      // identifystring
 
       window.onload = bgcolor();
     </script>
