--- a/03_location_dispersion/_slides/index.html
+++ b/03_location_dispersion/_slides/index.html
@@ -648,15 +648,16 @@ plt.savefig(f'images/{mode}.png', bbox_inches="tight")
 <li class="fragment">Bei einer geraden Anzahl von Werten bilden zwei Werte die Mitte – in diesem Fall ist der Median der Mittelwert dieser beiden Werte</li>
 <li class="fragment"><span class="math inline">\(\Big(\)</span> Alternativ mit Formel:  <span class="math inline">\(Tiefe_{\,\text{Median}}=\frac{n+1}{2}\Big)\)</span></li>
 </ol></li>
+<li class="fragment">Der Median wird mit einer Tilde (~) über der Variablen bezeichnet:  <span class="math inline">\(\tilde{x}, \tilde{y}, ..\)</span></li>
 </ul>
 <p><span class="block-heading" style="text-align:center; margin-bottom: 3px">Beispiel</span></p>
 <p>Folgende Beobachtungen der Zufallsvariable <span class="math inline">\(X\)</span> “Punktzahl in der Abi-Matheprüfung” werden in einer Stichprobe von 7 Psychologiestudierenden gemacht:  <span class="math inline">\(\mathbf{x} = \{13, 7, 15, 8, 4, 9, 14\}\)</span></p>
 <p><span class="math display">\[
-\text{Sortierte Reihenfolge:} \;\mathbf{x} = \{4, 7, 8, \color{green}{\mathbf{9}}, 13, 14, 15\} \;\rightarrow\; \mathrm{Median} = \tilde{x} = 9
+\text{Sortierte Reihenfolge:} \;\mathbf{x} = \{4, 7, 8, \color{green}{\mathbf{9}}, 13, 14, 15\} \;\rightarrow\; \tilde{x} = 9
 \]</span></p>
 <p>Wir fügen den Wert eines weiteren Studierenden hinzu:   <span class="math inline">\(\mathbf{x} = \{13, 7, 15, 8, 4, 9, 14, 10\}\)</span></p>
 <p><span class="math display">\[
-\text{Sortierte Reihenfolge:} \;\mathbf{x} = \{4, 7, 8, \color{green}{\mathbf{9}, \mathbf{10}}, 13, 14, 15\} \;\rightarrow\; \mathrm{Median} = \tilde{x} = \frac{9+10}{2} = 9.5
+\text{Sortierte Reihenfolge:} \;\mathbf{x} = \{4, 7, 8, \color{green}{\mathbf{9}, \mathbf{10}}, 13, 14, 15\} \;\rightarrow\; \tilde{x} = \frac{9+10}{2} = 9.5
 \]</span></p>
 <!-- ```{python}
 
